# OC-P10

./: .coverage  .coveragerc  .gitignore  CONST.py  OC-P10.postman_collection.json  db (copie).sqlite3  db.sqlite3  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
SoftDesk/: asgi.py  settings.py  urls.py  wsgi.py
SotfDesk/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  permissions.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_rename_created_time_comment_date_created_and_more.py  0003_alter_comment_options_alter_contributors_options_and_more.py  0004_alter_project_author.py  0005_alter_contributors_unique_together_and_more.py  0006_alter_contributors_user.py  0007_rename_contributors_contributor.py  0008_alter_issue_options_contributor_date_created_and_more.py  0009_alter_contributor_date_created.py
api/tests/: test_comment.py  test_contributor.py  test_issue.py  test_project.py
authentication/: admin.py  models.py  permissions.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_remove_user_birthday_remove_user_can_be_contacted_and_more.py  0003_user_birthday_user_can_be_contacted_and_more.py  0004_alter_user_birthday.py  0005_alter_user_birthday.py  0006_alter_user_birthday.py  0007_alter_user_birthday.py  0008_alter_user_can_be_contacted_and_more.py  0009_alter_user_can_be_contacted.py  0010_alter_user_birthday_alter_user_can_be_contacted.py  0011_alter_user_birthday.py  0012_alter_user_birthday.py
authentication/tests/: CONST.py  test_token.py  test_user.py
(+1 files in other folders)
