[project]
name = "softdesk"
version = "0.1.0"
description = "API for SoftDesk"
authors = [
    {name = "Anthony YOU",email = "spleen85@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage (>=7.8.0,<8.0.0)",
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
